# Web_module_7_HW

./: config.ini  main.py  my_select.py  pyproject.toml
migration/versions/: 84334fa73e84_init.py
